<resources>
    <string name="app_name">iPAD</string>
    <string name="Portfolio">Portfolio</string>
    <string name="Home">Home</string>
    <string name="Watchlist">Watchlist</string>
    <string name="Main_Content">Main</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arrow_right">arrow_right</string>
    <string name="logout">Logout</string>
    <string name="ic_logout">ic_logout</string>
    <string name="right_arrow">right_arrow</string>
    <string name="about">About</string>
    <string name="info">info</string>
    <string name="notifications">Alerts</string>
    <string name="avatar">avatar</string>
    <string name="Profile">Profile</string>
    <string name="Alerts">Alerts</string>
    <string name="Password">Password</string>
    <string name="Trading">Trading</string>
    <string name="TestAlertsFragment">TestAlertsFragment</string>
    <string name="enter_token">Enter Token</string>
    <string name="enter_your_token_to_continue">Enter your token to continue</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login">Login</string>
    <string name="don_t_have_a_token_generate_one">Don\'t have a token? Generate one</string>
    <string name="user">User</string>
    <string name="create_account">Create Account</string>
    <string name="generate_your_unique_token">Generate your unique token</string>
    <string name="generate_token">Generate Token</string>
    <string name="your_token">Your Token</string>
    <string name="token_will_appear_here">Token will appear here</string>
    <string name="copy_token">Copy Token</string>
    <string name="already_have_a_token_login">Already have a token? Login</string>
    <string name="default_web_client_id" translatable="false">118628139920-lsp9dot932pvmlbrud8925ktc3ecpjo5.apps.googleusercontent.com</string>

    <!-- Stock related strings -->
    <string name="stock_price_format">$%.2f</string>
    <string name="stock_change_positive">+%s</string>
    <string name="stock_change_negative">-%s</string>
    <string name="stock_change_percent_positive">(+%s)</string>
    <string name="stock_change_percent_negative">(-%s)</string>
</resources>