<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:enabled="true"
        android:title="@string/Home" />

    <item
        android:enabled="true"
        android:id="@+id/nav_portfolio"
        android:icon="@drawable/portfolio"
        android:title="@string/Portfolio" />

    <item
        android:enabled="true"
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:title="@string/Profile" />

    <item
        android:id="@+id/nav_alert"
        android:icon="@drawable/alert"
        android:title="@string/Alerts" />
  <!-- review this change please -->
    <item
        android:id="@+id/navigation_trading"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/Trading" />

</menu>